--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -5,6 +5,10 @@ body {
   color: black;
 }
 
+h2 {
+  font-size: 70px;
+}
+
 /* header */
 
 .title {
@@ -55,13 +59,48 @@ a {
 } 
 
 .mission-text h2 {
-  font-size: 70px;
   margin-top: 20px;
 }
 
 .mission-text p {
   font-size: 50px;
-  width: 80%;
+  width: 90%;
   margin: -50px auto 0;
 }
 
+/* Portfolio */
+
+.portfolio h2 {
+  text-align: center;
+}
+
+.portfolio p {
+  font-size: 50px;
+  width: 90%;
+  margin: -50px auto 0;
+  text-align: center;
+}
+
+.container {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.container img {
+  width: 300px;
+}
+
+.container figure {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 775px;
+}
+
+.container figcaption {
+  font-size: 50px;
+  margin: 0 auto;
+}
